# Recall

./: .gitignore  CHANGELOG.md  Dockerfile  ML_PLAN.md  ML_TRAINING_PLAN.md  README.md  autopilotfixes.md  docker-compose.yml  install.js  pyproject.toml  roadmap.md  v29-baseline-snapshot.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: PROJECT_MEMORY.md  TUNING.md
hooks/: build-guard.js  context-monitor.js  git-watch.js  lint-check.js  observe-edit.js  recall-retrieve.js  recall-session-summary.js  recall-statusline.js  session-save.js  tdd-enforcer.js
mcp-server/: README.md  claude-config-snippet.json  index.js  index.test.js  package-lock.json  package.json
scripts/: deploy.ps1  deploy.sh  migrate_embeddings.py
src/: __init__.py
src/api/: __init__.py  auth.py  main.py  rate_limit.py
src/core/: __init__.py  auto_linker.py  config.py  consolidation.py  diff_parser.py  document_ingest.py  domains.py  embeddings.py  health.py  llm.py  metrics.py  models.py  reranker.py  reranker_trainer.py  retrieval.py  signal_classifier.py  signal_classifier_trainer.py  signal_detector.py
src/storage/: __init__.py  neo4j_documents.py  neo4j_store.py  postgres_store.py  qdrant.py  redis_store.py
src/workers/: __init__.py  decay.py  fact_extractor.py  invalidation.py  main.py  observer.py  patterns.py  signals.py
tests/: __init__.py  simulation.py
tests/api/: test_admin_domains.py  test_admin_graph.py  test_admin_rehab.py  test_ingest_approve.py  test_memory_store_domain.py
(+192 files in other folders)
